# pablocaicedor.github.io

./: .Rprofile  .gitignore  README.md  _quarto.yml  about.html.md  about.qmd  index-listing.json  index.html.md  index.qmd  pyproject.toml
accelerolog/: README.md  calibration.py  export.py  main.py  sensors.py  storage.py  ui.py
clases/: Class_APSB.html.md  Class_APSB.qmd  Class_ASIM.html.md  Class_ASIM.qmd  Class_ML.html.md  Class_ML.qmd  Class_NumericalAnalysis.html.md  Class_NumericalAnalysis.qmd  Class_PAIM.html  Class_PAIM.qmd  Class_PSIM.html  Class_PSIM.html.md  Class_PSIM.qmd  Class_SYSB.html.md  Class_SYSB.qmd  Class_Statistics.html.md  Class_Statistics.qmd  talleres.qmd
codigo/: datos.xlsx  datossilvia.csv  datossilvia.xlsx  graficas silvia.r  preparing_slides.html.md  preparing_slides.ipynb  preparing_slides_002.html.md  preparing_slides_002.ipynb  prueba.R
data/: JS00001.hea:com.dropbox.attrs  JS00001.mat:com.dropbox.attrs  diabetes.csv:com.dropbox.attrs  insurance.csv:Zone.Identifier  insurance.csv:com.dropbox.attrs  mitbih_lecture.csv:com.dropbox.attrs  pacientes.csv  pacientes.csv:Zone.Identifier
docs/: about.html  index-listing.json  index.html  listings.json  search.json
evaluaciones/: eval001_ConductaEntrada.ipynb  eval001_ConductaEntrada_solution.ipynb
presentaciones/: pythonprogrammin.qmd
proyectos/: ComparisonML.qmd  PredictiveModelling.html.md  PredictiveModelling.qmd
rubricas/: Rubrica_EDA.html.md  Rubrica_EDA.qmd  Rubrica_EDA.tex  Rubrica_ProyectoAnalisisNumerico.html.md  Rubrica_ProyectoAnalisisNumerico.qmd  Rubrica_Regression.qmd  (+5 more)
(+623 files in other folders)
