[project]
name = "pablocaicedor-github-io"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pooch>=1.8.2",
    "pywavelets>=1.9.0",
    "quarto>=0.1.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "tensorflow[and-cuda]>=2.20.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
